--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bezier-js": "^6.1.0",
     "fontkit-next": "^1.8.3",
     "lodash": "^4.17.21",
     "pixi.js": "^6.2.0"
@@ -21,10 +22,10 @@
     "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.0.0",
     "@types/pixi.js": "^5.0.0",
-    "html-webpack-plugin": "^5.5.0",
     "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "floss": "^5.0.1",
+    "html-webpack-plugin": "^5.5.0",
     "mocha": "^9.1.3",
     "stream-browserify": "^3.0.0",
     "ts-loader": "^9.2.6",
