--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@types/pixi.js": "^5.0.0",
     "buffer": "^6.0.3",
     "chai": "^4.3.4",
+    "dat.gui": "^0.7.9",
     "floss": "^5.0.1",
     "html-webpack-plugin": "^5.5.0",
     "mocha": "^9.1.3",
