--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -22,4 +22,5 @@ jobs:
         with:
           node-version: ${{ matrix.node-version }}
       - run: npm i
-      - run: npm run test
+      - run: npm run test:build
+      - run: npm run test:run
