Adding file check

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
     "test:build": "webpack --config webpack.test.config.js",
-    "test:run": "floss --path dist/test.js",
+    "test:run": "floss --path ./dist/test.js",
     "test": "npm run test:build && npm run test:run",
     "server": "python3 -m http.server"
   },
