--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -23,4 +23,5 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm i
       - run: npm run test:build
+      - run: bash file_check
       - run: npm run test:run
