--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -23,5 +23,6 @@ jobs:
           node-version: ${{ matrix.node-version }}
       - run: npm i
       - run: npm run test:build
-      - run: bash file_check
+      - run: echo $(pwd)
+      - run: bash ./file_check.sh
       - run: npm run test:run
