--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -8,24 +8,15 @@ on:
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
-    strategy:
-      matrix:
-        node-version: [16.x]
-
     steps:
       - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
+      - uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
-      - run: echo $(pwd)
-      - run: echo $NODE_ENV
+          node-version: 16
       - run: npm install -g floss electron
       - run: npm install --production=false
       - run: npm run test:build
-      - run: bash ./file_check.sh
-      - run: floss -h
-      - run: floss --path ./dist/test.js
+      - uses: GabrielBB/xvfb-action@v1.6
+        with:
+          run: floss --path ./dist/test.js
