--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -14,7 +14,7 @@ jobs:
       - uses: actions/setup-node@v3
         with:
           node-version: 16
-      - run: npm install -g floss electron
+      - run: npm install -g floss electron http-server
       - run: npm install
       - run: npm run test:build
       - uses: GabrielBB/xvfb-action@v1.6
