--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
     "test:build": "webpack --config webpack.test.config.js",
-    "test:run": "floss --path ./dist/test.js",
-    "test": "npm run test:build && npm run test:run",
-    "server": "python3 -m http.server"
+    "test:run": "floss --path ./dist/test.js --debug",
+    "test": "npm run serve && npm run test:build && npm run test:run",
+    "serve": "./scripts/start_server.sh"
   },
   "author": "",
   "license": "ISC",
@@ -28,6 +28,7 @@
     "chai": "^4.3.4",
     "dat.gui": "^0.7.9",
     "floss": "^5.0.1",
+    "http-server": "^14.1.1",
     "html-webpack-plugin": "^5.5.0",
     "mocha": "^9.1.3",
     "stream-browserify": "^3.0.0",
