--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
-    "test:build": "webpack --config webpack.test.config.js",
+    "test:build": "webpack --config webpack.test.config.js &",
     "test:run": "floss --path ./dist/test.js --debug",
     "test": "npm run serve && npm run test:build && npm run test:run",
     "serve": "./scripts/start_server.sh"
