--- a/package.json
+++ b/package.json
@@ -24,12 +24,13 @@
     "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.0.0",
     "@types/pixi.js": "^5.0.0",
+    "@types/whatwg-fetch": "^0.0.33",
     "buffer": "^6.0.3",
     "chai": "^4.3.4",
     "dat.gui": "^0.7.9",
     "floss": "^5.0.1",
-    "http-server": "^14.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
     "mocha": "^9.1.3",
     "stream-browserify": "^3.0.0",
     "ts-loader": "^9.2.6",
