--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test:build": "webpack --config webpack.test.config.js &",
     "test:run": "floss --path ./dist/test.js --debug",
     "test": "npm run serve && npm run test:build && npm run test:run",
-    "serve": "./scripts/start_server.sh"
+    "serve": "./scripts/start_server.sh",
+    "check": "./scripts/check_server.sh"
   },
   "author": "",
   "license": "ISC",
