--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -17,6 +17,7 @@ jobs:
       - run: npm install -g floss electron http-server
       - run: npm install
       - run: npm run serve
+      - run: sudo ufw allow 8080/tcp
       - run: sleep 3
       - run: npm run check
       - run: npm run test:build
