--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "private": true,
   "scripts": {
     "build": "webpack --config webpack.prod.config.js",
+    "demos:build": "webpack --config webpack.demos.config.js",
     "test:build": "webpack --config webpack.test.config.js &",
     "test:run": "floss --path ./dist/test.js --debug",
     "test": "npm run serve && npm run test:build && npm run test:run",
