--- a/package.json
+++ b/package.json
@@ -5,13 +5,8 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "build": "webpack --config webpack.prod.config.js",
-    "demos:build": "webpack --config webpack.demos.config.js",
     "test:build": "webpack --config webpack.test.config.js &",
-    "test:run": "floss --path ./dist/test.js --debug",
-    "test": "npm run serve && npm run test:build && npm run test:run",
-    "serve": "./scripts/start_server.sh",
-    "check": "./scripts/check_server.sh"
+    "test:run": "floss --path ./dist/test.js --debug"
   },
   "author": "",
   "license": "ISC",
@@ -29,9 +24,8 @@
     "@types/whatwg-fetch": "^0.0.33",
     "buffer": "^6.0.3",
     "chai": "^4.3.4",
+    "clean-webpack-plugin": "^4.0.0",
     "dat.gui": "^0.7.9",
-    "electron": "^13.6.9",
-    "floss": "^5.0.1",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
     "mocha": "^9.1.3",
