--- a/package.json
+++ b/package.json
@@ -5,8 +5,12 @@
   "main": "index.js",
   "private": true,
   "scripts": {
-    "test:build": "webpack --config webpack.test.config.js &",
-    "test:run": "floss --path ./dist/test.js --debug"
+    "demos": "webpack --config webpack.demos.config.js --watch",
+    "test:build": "webpack --config webpack.test.config.js --watch &",
+    "test:run": "floss --path ./dist/test.js --debug",
+    "test": "npm run test:build && npm run test:run",
+    "start": "./scripts/start_server.sh",
+    "check": "./scripts/check_server.sh"
   },
   "author": "",
   "license": "ISC",
@@ -26,6 +30,8 @@
     "chai": "^4.3.4",
     "clean-webpack-plugin": "^4.0.0",
     "dat.gui": "^0.7.9",
+    "electron": "^13.6.9",
+    "floss": "^5.0.1",
     "html-webpack-plugin": "^5.5.0",
     "http-server": "^14.1.1",
     "mocha": "^9.1.3",
@@ -34,6 +40,7 @@
     "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
+    "webpack-dev-server": "^4.13.0",
     "webpack-node-externals": "^3.0.0"
   }
 }
