--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "clean-webpack-plugin": "^4.0.0",
     "fontkit-next": "^1.8.3",
     "lodash": "^4.17.21",
     "pixi.js": "^6.2.0",
