--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "three": "^0.146.0"
   },
   "devDependencies": {
+    "pixelmatch": "^5.3.0",
+    "pngjs": "^7.0.0",
     "@types/chai": "^4.3.0",
     "@types/lodash": "^4.14.178",
     "@types/mocha": "^9.0.0",
