--- a/.github/workflows/github-action.yml
+++ b/.github/workflows/github-action.yml
@@ -28,3 +28,8 @@ jobs:
         with:
           name: test-image-artifacts
           path: ./tests/artifacts
+      - uses: actions/upload-artifact@v3
+        if: always()
+        with:
+          name: test-image-current
+          path: ./tests/current
