--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build": "webpack --config webpack.prod.config.js",
     "test:build": "webpack --config webpack.test.config.js &",
     "test:run": "floss --path ./dist/test.js -- disableHardwareAcceleration",
+    "test:debug": "floss --path ./dist/test.js --debug -- disableHardwareAcceleration",
     "test": "npm run serve && npm run test:build && npm run test:run",
     "serve": "./scripts/start_server.sh"
   },
