--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
   "scripts": {
     "demos": "webpack --config webpack.demos.config.js --watch",
     "build": "webpack --config webpack.prod.config.js",
-    "test:build": "webpack --config webpack.test.config.js &",
+    "test:build": "webpack --config webpack.test.config.js --watch &",
     "test:run": "floss --path ./dist/test.js -- disableHardwareAcceleration",
-    "test:debug": "floss --path ./dist/test.js --debug -- disableHardwareAcceleration",
-    "test": "npm run serve && npm run test:build && npm run test:run",
+    "test:debug": "DEBUG=1  floss --path ./dist/test.js --debug",
+    "test": "npm run serve && npm run test:build && npm run test:debug",
     "serve": "./scripts/start_server.sh"
   },
   "author": "",
