--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "webpack --config webpack.prod.config.js",
     "test:build": "webpack --config webpack.test.config.js &",
     "test:watch": "webpack --config webpack.test.config.js --watch &",
-    "test:run": "DEBUG=1 floss --path ./dist/test.js",
+    "test:run": "floss --path ./dist/test.js",
     "test:debug": "DEBUG=1  floss --path ./dist/test.js --debug",
     "test": "npm run serve && npm run test:watch && npm run test:debug",
     "serve": "./scripts/start_server.sh"
