--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,2 @@
-*.ttf *.png filter=lfs diff=lfs merge=lfs -text
+*.ttf filter=lfs diff=lfs merge=lfs -text
+tests/expected/*.png filter=lfs diff=lfs merge=lfs -text
