--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,3 @@
 *.ttf filter=lfs diff=lfs merge=lfs -text
 tests/expected/*.png filter=lfs diff=lfs merge=lfs -text
+docs/*.ttf filter=lfs diff=lfs merge=lfs -text
