--- a/package.json
+++ b/package.json
@@ -45,7 +45,6 @@
     "typescript": "^4.5.4",
     "webpack": "^5.65.0",
     "webpack-cli": "^4.9.1",
-    "webpack-node-externals": "^3.0.0",
-    "copy-webpack-plugin": "^11.0.0"
+    "webpack-node-externals": "^3.0.0"
   }
 }
